--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Pre course homeworks 1</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap">
+
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
+    <div class="clockCase">
+      <div>
+        <h1 id="clock">00:00:00</h1>
+        <div class="buttonCase">
+          <button id="start">Запустить часы</button>
+          <button id="stop">Остановить часы</button>
+        </div>
+      </div>
+    </div>
+    
+    <script src="01.js"></script>
     <!-- Lesson 1 -->
     <script src="lesson-01/02.js"></script>
     <script src="lesson-01/03.js"></script>
